--- a/app/views/repositories/index.slim
+++ b/app/views/repositories/index.slim
@@ -1,1 +1,6 @@
 h1 There be repositories
+div
+  = form_with(url: '/repositories', method: 'get') do
+    = label_tag(:query, 'Search for:')
+    = text_field_tag(:query)
+    = submit_tag('Search')
