1 Implemented the most basic skeleton for RepositoriesController#index action 2 Disabled javascript for now

--- a/app/views/repositories/index.html.slim
+++ b/app/views/repositories/index.html.slim
@@ -1,6 +1,10 @@
 h1 There be repositories
 div
-  = form_with(url: '/repositories', method: 'get') do
-    = label_tag(:query, 'Search for:')
-    = text_field_tag(:query)
-    = submit_tag('Search')
+  div
+    = form_with(url: '/repositories', method: 'get') do
+      = label_tag(:query, 'Search for:')
+      = text_field_tag(:query)
+      = submit_tag('Search')
+
+- @repositories.each do |repo|
+  p = repo
