Implemented links to repos on the index page

--- a/app/views/repositories/index.html.slim
+++ b/app/views/repositories/index.html.slim
@@ -7,4 +7,9 @@ div
       = submit_tag('Search')
 
 - @repositories.each do |repo|
-  p = repo
+  p
+    div
+      = link_to(repo['full_name'], repo['html_url'])
+    div
+      = repo['description']
+
