--- a/app/views/repositories/index.html.slim
+++ b/app/views/repositories/index.html.slim
@@ -59,13 +59,13 @@
       tbody
         - (@formatted_response[:repositories] || []).each do |repo|
           tr
-            - if repo['avatar_url']
+            - if repo.avatar_url
               td
                 div
-                  = image_tag(repo['avatar_url'], height: '80', width: '80')
+                  = image_tag(repo.avatar_url, height: '80', width: '80')
             td
               div
-                = link_to(repo['full_name'], repo['html_url'])
+                = link_to(repo.full_name, repo.html_url)
               div
-                = repo['description']
+                = repo.description
 
